inclusao e estilização de footer

--- a/arquitetura-css-assets/index.html
+++ b/arquitetura-css-assets/index.html
@@ -34,6 +34,7 @@
         <link rel="stylesheet" href="./assets/css/pessoas/pessoa-nome.css">
         <link rel="stylesheet" href="./assets/css/pessoas/pessoa-imagem.css">
         <link rel="stylesheet" href="./assets/css/pessoas/pessoa-funcao.css">
+        <link rel="stylesheet" href="./assets/css/rodape.css">
     </head>
     <body>
     <header class="cabecalho">
@@ -127,5 +128,9 @@
             </div>
         </div>
     </section>
+    <footer class="rodape">
+        Contato : example@example.com.br
+    </footer>
+
 </body>
 </html>
